# recommendation-system_nlp_dvc

./: .gitignore  README.md  dvc.yaml  params.yaml  pyproject.toml
notebook/: DataPreparation.ipynb  EDA.ipynb
recommendationService/: .gitignore  app.py  recommender.py
src/: dataPreparation.py  getData.py  modelDevelopment.py
